pygi-property: Lookup property in base classes of non-introspected types

Look for introspection data in the base classes of non-introspected gtypes.
This is necessary to look up introspection data for plugins.

https://bugzilla.gnome.org/show_bug.cgi?id=684058